data/all_generated_tests/raw_wast_tests/if_EdgeCaseFailuresinbr_table_1992.wast
;; 3. **Test Description**: Test `if` with a false branch leading to deeply nested `br_table` instructions with all targets exceeding bounds.    - **Constraint**: Validates that the false path of the `if` block handles deep nesting and out-of-bounds `br_table` targets.    - **Relation to Edge Case**: Probes the robustness of the control flow in handling more complex branching structures and improper target references.

(assert_invalid
  (module (func $test-if-deep-br-table
    (if (i32.const 0)
      (then (i32.const 1))
      (else (block $label1
              (block $label2
                (block $label3
                  (br_table 3 4 5 6)
                )
              )
            )
      )
    )
  ))
  "br_table target out of bounds"
)